--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,6 +1,10 @@
 name: Publish Python distributions to PyPI
 
-on: push
+on: 
+  push:
+  workflow_dispatch:
+  release:
+    types: [published]
 
 jobs:
   build-n-publish:
@@ -30,7 +34,7 @@ jobs:
         .
 
     - name: Publish distribution to PyPI
-      if: startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@master
       with:
+        user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
