--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
   - defaults
 dependencies:
   - python=3.9.7
-  - numpy
+  - numpy>=1.21.6
   - pandas
   - deap=1.3.1
   - spotpy=1.5.14
