--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,7 @@ plugins:
       scripts:
       - gen_ref_pages.py
   - literate-nav:
-      nav_file: SUMMARY.md
+      nav_file: docs/SUMMARY.md
 watch:
     - hydromodel
 nav:
