--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -19,9 +19,7 @@ permissions:
 
 jobs:
   deploy:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python
@@ -29,7 +27,7 @@ jobs:
       with:
         python-version: '3.x'
     - name: Install dependencies
-      run: |
+       run:
         python -m pip install --upgrade pip
         pip install build
     - name: Build package
@@ -39,3 +37,12 @@ jobs:
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
+    - name: Download source
+      uses: actions/checkout@v3
+    - name: Install Python libs
+      run: pip install --no-deps -r requirements.txt
+    - name: Build site
+      run: mkdocs build
+    - name: Deploy to gh-pages
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      run: mkdocs gh-deploy --force
