--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -30,12 +30,14 @@ jobs:
       run:
         python -m pip install --upgrade pip
         pip install build
+        pip install pip-tools
     - name: Build package
       run: python -m build
     - name: Download source
       uses: actions/checkout@v3
     - name: Install Python libs
-      run: pip install --no-deps -r requirements.txt
+      run: pip-compile requirements.in
+           pip install --no-deps -r requirements.txt
     - name: Build site
       run: mkdocs build
     - name: Deploy to gh-pages
