--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -36,8 +36,9 @@ jobs:
     - name: Download source
       uses: actions/checkout@v3
     - name: Install Python libs
-      run: pip-compile requirements.in
-           pip install --no-deps -r requirements.txt
+      run: 
+        pip-compile requirements.in
+        pip install --no-deps -r requirements.txt
     - name: Build site
       run: mkdocs build
     - name: Deploy to gh-pages
