--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,6 @@ mkdocs-material
 mkdocs-gen-files
 mkdocs-literate-nav
 mkdocs-section-index
-mkdocstrings-python
 click
 pyyaml
 importlib-metadata
@@ -43,3 +42,4 @@ zipp
 pyyaml-env-tag
 mergedeep
 watchdog
+griffe
