--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -42,6 +42,9 @@ jobs:
     - name: Deploy to gh-pages
       if: github.event_name == 'push' && github.ref == 'refs/heads/main'
       run: mkdocs gh-deploy --force
+      env:
+        REPO_KEY: ${{secrets.GIT_PUSH}}
+        USERNAME: github-actions[bot]
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
