--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -22,6 +22,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+      with:
+        persist-credentials: false
+        fetch-depth: 0
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
@@ -38,15 +41,15 @@ jobs:
       run: 
         pip install --no-deps -r requirements.txt
     - name: Build site
-      run: mkdocs build
+      run: mkdocs build --clean
     - name: Deploy to gh-pages
       if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-      run: mkdocs gh-deploy --force
+      run: mkdocs gh-deploy --force           
       env:
         REPO_KEY: ${{secrets.GIT_PUSH}}
         USERNAME: github-actions[bot]
     - name: Publish package
-      uses: pypa/gh-action-pypi-publish@master
+      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
