--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -41,13 +41,12 @@ jobs:
       run: 
         pip install --no-deps -r requirements.txt
     - name: Build site
-      run: mkdocs build --clean
+      run: Tiryoh/actions-mkdocs@v0
     - name: Deploy to gh-pages
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-      run: mkdocs gh-deploy --force           
-      env:
-        REPO_KEY: ${{secrets.GIT_PUSH}}
-        USERNAME: github-actions[bot]
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+          github_token: ${{ secrets.GIT_PUSH }}
+          publish_dir: ./docs
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
