--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -47,11 +47,11 @@ jobs:
       if: github.event_name == 'push' && github.ref == 'refs/heads/main'
       run: mkdocs gh-deploy --force
       env:
-          REPO_KEY: ${{ secrets.GIT_PUSH }}
+          REPO_KEY: ${{ secrets.GIT_ACTION_PUSH }}
           CONFIG_FILE: mkdocs.yml
           USERNAME: github-actions[bot]
     - name: Publish package
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+      uses: pypa/gh-action-pypi-publish@master
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
