--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -17,6 +17,9 @@ build:
 # Build documentation in the docs/ directory with Sphinx
 mkdocs:
   configuration: mkdocs.yml
+python:
+  install:
+    - requirements: requirements.txt
 
 # If using Sphinx, optionally build your docs in additional formats such as PDF
 # formats:
