--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -23,34 +23,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
         python-version: '3.x'
     - name: Install dependencies
-      run:
+      run: |
         python -m pip install --upgrade pip
         pip install build
     - name: Build package
       run: python -m build
-    - name: Download source
-      uses: actions/checkout@v3
+    #- name: Download source
+      #uses: actions/checkout@v3
     - name: Install Python libs
       run: 
         pip install --no-deps -r requirements.txt
     - name: Build site
       run: mkdocs build --clean
-    #- name: Deploy to gh-pages
-      #if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-      #run: mkdocs gh-deploy --force
-      #env:
-          #REPO_KEY: ${{ secrets.GIT_ACTION_PUSH }}
-          #CONFIG_FILE: mkdocs.yml
-          #USERNAME: github-actions[bot]
     - name: Publish package
-      uses: pypa/gh-action-pypi-publish@master
+      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
