--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -40,6 +40,8 @@ jobs:
         pip install --no-deps -r requirements.txt
     - name: Build site
       run: mkdocs build --clean
+    - name: Upload to Test PyPI
+      run: twine upload --repository testpypi dist/*
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
