--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -31,10 +31,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install build
+        pip install twine
     - name: Build package
       run: python -m build
-    #- name: Download source
-      #uses: actions/checkout@v3
     - name: Install Python libs
       run: 
         pip install --no-deps -r requirements.txt
