--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,7 @@ plugins:
   - section-index
   - gen-files:
       scripts:
-      - gen_ref_pages.py
+      - docs/gen_ref_pages.py
   - literate-nav:
       nav_file: SUMMARY.md
 watch:
