--- a/.pypirc
+++ b/.pypirc
@@ -1,3 +1,10 @@
+[distutils]
+index-servers =
+    testpypi
+    
+[testpypi]
+repository = https://test.pypi.org/legacy/
+
 [testpypi]
 username = __token__
 password = ${{ secrets.TEST_PYPI_TOKEN }}
