--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -39,6 +39,8 @@ jobs:
         pip install --no-deps -r requirements.txt
     - name: Build site
       run: mkdocs build --clean
+    - name: Publish package to PyPI Test with Twine
+      run: twine upload --repository testpypi dist/*
     - name: Publish package to PyPI
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
