--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -38,7 +38,7 @@ jobs:
       run: 
         pip install --no-deps -r requirements.txt
     - name: Build site
-      run: mkdocs build --clean
+      run: mkdocs build
     - name: Publish package to PyPI Test with Twine
       run: twine upload --repository testpypi dist/* --username __token__ --password ${{ secrets.TEST_PYPI_TOKEN }}
     - name: Publish package to PyPI
